[project]
name = "cloudcontain-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Theo Nakfoor",email = "tdnakfoor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "pymongo (>=4.14.1,<5.0.0)",
    "pusher (>=3.3.3,<4.0.0)",
    "jose (>=1.0.0,<2.0.0)",
    "boto3 (>=1.40.21,<2.0.0)",
    "bson (>=0.5.10,<0.6.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "cloudcontain_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
